<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollIndicators="none"
        tools:context="com.example.vm10.dominandoandroid.chapter4.EditTextActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtName"
                android:inputType="textPersonName"
                android:layout_marginBottom="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtPassword"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtAllCaps"
            android:inputType="textCapCharacters"
            android:layout_marginBottom="15dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtOnlyNumbers"
            android:inputType="number"
            android:layout_marginBottom="15dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtAutoCorrect"
            android:inputType="textAutoCorrect"
            android:layout_marginBottom="15dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtURI"
            android:inputType="textUri"
            android:layout_marginBottom="15dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Multiline"
            android:inputType="textMultiLine"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</ScrollView>
